he editado AmenityRepositoryTest